--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@
   border: none;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+}
+
 ul,
 menu,
 nav {
@@ -52,16 +59,14 @@ body {
 /* HOME STYLE */
 /* HOME STYLE */
 /*****************************************************/
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-  margin: 2rem 0;
-}
+
+/*****************************************************/
+/* HEADER */
+/*****************************************************/
 
 .home-header {
   margin-bottom: 3rem;
+  margin: 2rem 0;
 }
 
 .home-title {
@@ -83,4 +88,16 @@ body {
   margin: 2rem 0;
   color: var(--blue);
   font-weight: bolder;
+}
+
+/*****************************************************/
+/* FOOTER */
+/*****************************************************/
+
+footer {
+  position: absolute;
+  bottom: 0;
+  padding: 3rem 0;
+  color: var(--dark-wine);
+  font-weight: bold;
 }
